--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -45,3 +45,14 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 :::note[Tip]
 UQL is designed to be **unobtrusive**. You don't need to change your architecture to fit the ORM; UQL fits into yours.
 :::
+
+---
+
+## Built with ❤️ and supported by
+
+UQL is an open-source project driven by the community and proudly sponsored by **[Variability.ai](https://variability.ai)**.  
+
+> "Intelligence in Every Fluctuation"
+
+Their support helps us maintain and evolve the "Smartest ORM" for developers everywhere. Thank you for being part of our journey!
+
