docs: Update UQL description and expand supported environments and databases.

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -30,7 +30,7 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 		Deeply nested auto-completion for your queries and entity definitions. Stop catching bugs in production.
 	</Card>
 	<Card title="Multiple Dialects" icon="add-document">
-		First-class support for PostgreSQL, MySQL, MariaDB, and SQLite with a unified, consistent API.
+		First-class support for PostgreSQL, MySQL, MariaDB, SQLite, LibSQL, Neon, Cloudflare D1, and even MongoDB with a unified, consistent API.
 	</Card>
 	<Card title="Performant by Design" icon="setting">
 		Zero-overhead query generation and smart connection pooling for high-concurrency environments.
